fixed contact spacing;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -511,4 +511,5 @@ html {
 
 #contact {
   padding-top:15px;
+  padding-left:15px;
 }
